internal/predicate/testdata/accept/07_no_open_critical_reviews.lua
not has_relation(entity, 'has-review-response', {status='open', severity='critical'})
  and not has_relation(entity, 'has-review-response', {status='open', severity='significant'})
