internal/predicate/testdata/reject/over_arity_table_arg.lua
has_relation(entity, 'has-review-response', {a=1}, {b=2})
